Hide MediaCapabilities.encodingInfo() when the platform does not support it. https://bugs.webkit.org/show_bug.cgi?id=197476

Reviewed by Eric Carlson.

Source/WebCore:

Test: platform/mac/media/mediacapabilities/mediacapabilities-encodingInfo-undefined.html

Add a new IDL attribute, CustomEnabled, which allows non Settings-based enabling of attributes and objects.

* Modules/mediacapabilities/MediaCapabilities.idl:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSMediaCapabilitiesCustom.h: Copied from Source/WebCore/Modules/mediacapabilities/MediaCapabilities.idl.
(WebCore::JSMediaCapabilitiesEncodingInfoIsEnabled):
* bindings/scripts/CodeGeneratorJS.pm:
(NeedsRuntimeCheck):
(GenerateRuntimeEnableConditionalString):
* bindings/scripts/IDLAttributes.json:
* bindings/scripts/preprocess-idls.pl:
(GenerateConstructorAttributes):
* platform/mediacapabilities/MediaEngineConfigurationFactory.cpp:
(WebCore::MediaEngineConfigurationFactory::hasDecodingConfigurationFactory):
(WebCore::MediaEngineConfigurationFactory::hasEncodingConfigurationFactory):
* platform/mediacapabilities/MediaEngineConfigurationFactory.h:

LayoutTests:

* platform/ios/media/mediacapabilities/mediacapabilities-encodingInfo-undefined-expected.txt: Added.
* platform/ios/media/mediacapabilities/mediacapabilities-encodingInfo-undefined.html: Added.
* platform/ios/media/mediacapabilities/mediacapabilities-types-expected.txt: Added.
* platform/mac/media/mediacapabilities/mediacapabilities-encodingInfo-undefined-expected.txt: Added.
* platform/mac/media/mediacapabilities/mediacapabilities-encodingInfo-undefined.html: Added.
* platform/mac/media/mediacapabilities/mediacapabilities-types-expected.txt: Added.


Canonical link: https://commits.webkit.org/212197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245636 268f45cc-cd09-0410-ab3c-d52691b4dbfc