Source/WebCore/platform/mediacapabilities/MediaEngineConfigurationFactory.h
@@ -41,6 +41,9 @@ public:
     using DecodingConfigurationCallback = WTF::Function<void(MediaCapabilitiesDecodingInfo&&)>;
     using EncodingConfigurationCallback = WTF::Function<void(MediaCapabilitiesEncodingInfo&&)>;
 
+    static bool hasDecodingConfigurationFactory();
+    static bool hasEncodingConfigurationFactory();
+
     static void createDecodingConfiguration(MediaDecodingConfiguration&&, DecodingConfigurationCallback&&);
     static void createEncodingConfiguration(MediaEncodingConfiguration&&, EncodingConfigurationCallback&&);
 
